--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <h1 style="line-height: 30px;font-size: 28px;margin-bottom: auto;">Kangyao Huang&emsp;&emsp;<img src="profile/name.png" width="80" style="margin-bottom: -5px;"></h1>
         <h3>PhD Candidate | AI Researcher | Aircraft & Robotics Engineer</h3>
         <hr>
-        <p>I am an AI researcher and robot engineer from China. Currently, I am pursuing a PhD degree in Computer Science at Tsinghua University under the supervision of Prof. Huaping Liu.
+        <p>I am an AI researcher and robot engineer from China. Currently, I am pursuing a PhD degree in Computer Science at Tsinghua University(THU) under the supervision of Prof. Huaping Liu.
             Besides, I hold an MRes degree in Control from ACSE, the University of Sheffield(UoS), UK., supervised by Prof. John Oyekan, and a BEng degree in Aerospace from Northwestern Polytechnical
             University(NWPU), China. Before my PhD work, I had several years start-up experience in aerospace and automation industrial sectors, serving as a UAV designer 
             and technical director.
@@ -720,7 +720,7 @@
                     to the advancement of renewable energy-powered UAV technology, offering potential applications in various fields 
                     such as environmental monitoring, aerial photography, and telecommunications.</p>
                 <p style="font-size: 10px;color: rgba(1, 145, 193, 0.579);">
-                    > We honor the memory of Zhaoxi Wang, one of the founding members of our team, whose dedication and vision continue 
+                    We honor the memory of Zhaoxi Wang, one of the founding members of our team, whose dedication and vision continue 
                     to inspire us as we move forward, and his spirit will forever remain an integral part of our journey,
                      just like this aircraft did.
                 </p>
@@ -852,13 +852,13 @@
 
         <div class="section2" style="padding:0px;vertical-align:middle;line-height: 5px;">
             <group>
-                <p style="font-weight: bold;font-style: italic;">2015~2018,&emsp;</p>
+                <p style="font-weight: bold;font-style: italic;">2015~2019,&emsp;</p>
                 <h3 class="sectionContentSubTitle">
                     <a style="font-weight: bold;">Co-Founder</a> @<a style="font-weight: bold;color: rgb(112, 112, 112);">Bingo Intelligence Co. Ltd.</a>, Xi'an, ShaanXi, China.
                 </h3>
             </group>
             <group>
-                <p style="font-weight: bold;font-style: italic;">2021~2022,&emsp;</p>
+                <p style="font-weight: bold;font-style: italic;">2020~2022,&emsp;</p>
                 <h3 class="sectionContentSubTitle">
                     <a style="font-weight: bold;">Research assistant</a> @Institute for New Technology Concept Vehicles,<a style="font-weight: bold;color: rgb(113, 112, 114);"> THU</a>, Beijing, China
                 </h3>
