--- a/index.html
+++ b/index.html
@@ -619,7 +619,7 @@
                     Project Principal:
                     <a href="https://scholar.google.com.hk/citations?user=0Q7pN4cAAAAJ" target="_blank">Xinyu Zhang</a>, 
                     Project Technical Leader:
-                    <b>Kangyao Huang</b>
+                    <b>Kangyao Huang</b>,
                     Director:
                     <a href="https://www.tsinghua.edu.cn/info/1166/93890.htm" target="_blank">Jun Li</a>,                    
                 </h3>
