--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@
                         </p>
                     </div>
                 </div>
-                <div class="dropdown"><span></span><a href="" target="http://arxiv.org/abs/2403.10487">Paper</a></div>
+                <div class="dropdown"><span></span><a href="http://arxiv.org/abs/2403.10487" target="_blank">Paper</a></div>
                 <div class="dropdown"><span></span><a href="https://github.com/KJaebye/Multiagent-Race" target="_blank">Code</a></div>
-                <div class="dropdown"><span></span><a href="" target="https://youtu.be/If7brGEzYNs">Video</a></div>
+                <div class="dropdown"><span></span><a href="https://youtu.be/If7brGEzYNs" target="_blank">Video</a></div>
             </aside>
         </div>
         <br>
