--- a/index.html
+++ b/index.html
@@ -347,9 +347,9 @@
             </div>
             <section class="section2Content">
                 <h2 class="sectionContentTitle">智能飞行汽车关键技术及发展趋势 - State-of-the-art and Technical Trends of Intelligent Flying Cars</h2>
-                <h3 class="sectionContentSubTitle"> 
+                <h3 class="sectionContentSubTitle">
                     <a href="https://scholar.google.com.hk/citations?user=0Q7pN4cAAAAJ" target="_blank">Xinyu Zhang</a>, 
-                    <a style="color: #999;">Songsong Rong</a>, 
+                    <a style="color: #999;">Songsong Rong</a>,
                     <a href="https://www.tsinghua.edu.cn/info/1166/93890.htm" target="_blank">Jun Li</a>,
                     <a href="https://www.cae.cn/cae/html/main/colys/00679747.html" target="_blank">Deyi Li</a>,
                     <a href="https://scholar.google.com.hk/citations?user=HXnkIkwAAAAJ" target="_blank">Huaping Liu</a>, 
@@ -358,8 +358,8 @@
                     <!-- <a href="https://scholar.google.com.hk/citations?user=pKCG3T8AAAAJ" target="_blank">Jianxi Luo</a>, -->
                 </h3>
                 <h3 class="sectionContentSubTitle">
-                    <em> 中国科学:技术科学, SCIENCE CHINA Technological Sciences, 2023, </em>
-                    <a style="color: rgb(247, 121, 175);font-weight: bold;font-style: oblique;font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">Review</a>
+                    <em> 中国科学:技术科学, SCIENCE CHINA Technological Sciences, 2023</em>
+                    <a style="color: rgb(247, 121, 175);font-weight: bold;font-style: oblique;font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">Cover Paper</a>
                 </h3>
             </section>
             <aside class="externalResourcesNav" style="margin-top:0%"> 
@@ -374,7 +374,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="dropdown"><span></span><a href="publications/2023_中国科学技术科学_智能飞行汽车关键技术及发展趋势.pdf" target="_blank">Paper</a></div>
+                <div class="dropdown"><span></span><a href="https://www.sciengine.com/SST/doi/10.1360/SST-2023-0098" target="_blank">Paper</a></div>
             </aside>
         </div>
         <br>
@@ -418,9 +418,9 @@
                     <a href="https://www.tsinghua.edu.cn/info/1166/93890.htm" target="_blank">Jun Li</a>,
                 </h3>
                 <h3 class="sectionContentSubTitle">
-                    <em> IEEE Transactions on Intelligent Vehicles, 2022, </em> 
+                    <em> IEEE Transactions on Intelligent Vehicles, 2022</em> 
                     <a style="color: rgb(247, 121, 175);font-weight: bold;font-style: oblique;font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">Review</a>
-                    <em>,</em>
+                    <em></em>
                     <a style="color: rgb(247, 121, 175);font-weight: bold;font-style: oblique;font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">IF: 8.2</a>
                 </h3>
             </section>
@@ -476,7 +476,8 @@
                     <a href="https://scholar.google.com.hk/citations?user=0Q7pN4cAAAAJ" target="_blank">Xinyu Zhang</a>, 
                 </h3>
                 <h3 class="sectionContentSubTitle">
-                    <em> Springer Lecture Notes in Electrical Engineering, Chinese Intelligent Automation Conference 2021 </em>
+                    <em> Chinese Intelligent Automation Conference (CIAC) 2021 </em>
+                    <a style="color: rgb(247, 121, 175);font-weight: bold;font-style: oblique;font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">Best Student Paper</a>
                 </h3>
             </section>
             <aside class="externalResourcesNav" style="margin-top:0%"> 
@@ -793,7 +794,7 @@
             </div>
             <section class="section2Content">
                 <h2 class="sectionContentTitle"> Oil-powered Variable-pitch Quadrotor</h2>
-                <p style="font-size: 10px;"><b>This is my BEng dissertation.</b> Notably, this is the first successful flight of 
+                <p style="font-size: 10px;"><b>This is my BEng dissertation.</b> Notably, this is the <b>first successful flight</b> of 
                     oil-powered rotary-wing UAV utilizing variable-pitch control in China. We finished it at the end of 2015. Work 
                     with teammates Fanjie Kong, Jingdong Ma.</p>
                 <p style="font-size: 10px;"><b>Brief:</b> I participated a groundbreaking project focused on the development of a 
