--- a/index.html
+++ b/index.html
@@ -55,12 +55,128 @@
     </aside>
 </header>
 
+<section class="mainContent"> 
+    <section class="section2">
+        <h2 class="sectionTitle">Top Open-source Projects</h2>
+        <hr class="sectionTitleRule">
+        <hr class="sectionTitleRule2">
+
+    <!-- emNavi  -->
+    <div onmouseout="emNavi_stop()" onmouseover="emNavi_start()">	  
+        <div class="sectionContent" style="padding:0px;vertical-align:middle">
+            <div class="one">
+                <div class="two" id="emNavi_image">
+                    <video  width="100%" height="100%" muted="" autoplay="" loop="">
+                        <source src="material/X152b-ego.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                </div>
+                <img src="material/X152b-ego.jpg" width="100%">
+            </div>
+            <script type="text/javascript">
+                function emNavi_start() {
+                document.getElementById('emNavi_image').style.opacity = "1";
+                }
+
+                function emNavi_stop() {
+                document.getElementById('emNavi_image').style.opacity = "0";
+                }
+                emNavi_stop()
+            </script>
+        </div>
+        <section class="section2Content">
+            <h2 class="sectionContentTitle"> emNavi (Embodied Navigation) </h2>
+                <h3 class="sectionContentSubTitle"> 
+                    <b>Work with</b> 
+                    <a style="color: #999;">Colleagues </a><a style="font-style: italic;">@SuperMicro Navi Intelligence Co., Ltd. (超微智导)</a> and <a style="font-style: italic;">@Q.Y. Lab.</a>
+                </h3>
+                <p style="font-size: 12px;">Brief: <b>emNavi</b> is an open-source project derived from "Embodied Navigation". 
+                    The vision of emNavi is to re-construct and optimize the navigation-related SoTA (state of the art) 
+                    algorithms and apply them on robots, especially aerial robots, to promote the implementation of Embodied AI 
+                    on mobile robots. </p>
+            </h2>
+
+        </section>
+        <aside class="externalResourcesNav" style="margin-top:0%"> 
+            <div class="dropdown">
+                <span></span><a href="https://github.com/emNavi" target="_blank">Project Page</a>
+            </div>
+        </aside>
+    </div>
+    <br>
+
+</section>
+
 <!-- content -->
 <section class="mainContent"> 
     <section class="section2">
         <h2 class="sectionTitle">Selected Publications</h2>
         <hr class="sectionTitleRule">
         <hr class="sectionTitleRule2">
+
+        <!-- 2024ijcai-->
+        <div onmouseout="ijcai24_stop()" onmouseover="ijcai24_start()">	  
+            <div class="sectionContent" style="padding:0px;vertical-align:middle">
+                <div class="one">
+                    <div class="two" id="ijcai24_image">
+                        <video  width="100%" height="100%" muted="" autoplay="" loop="">
+                            <source src="material/2024ijcai.mp4" type="video/mp4">
+                            Your browser does not support the video tag.
+                        </video>
+                    </div>
+                    <img src="material/2024ijcai.jpg" width="100%">
+                </div>
+                <script type="text/javascript">
+                    function ijcai24_start() {
+                    document.getElementById('ijcai24_image').style.opacity = "1";
+                    }
+
+                    function ijcai24_stop() {
+                    document.getElementById('ijcai24_image').style.opacity = "0";
+                    }
+                    ijcai24_stop()
+                </script>
+            </div>
+            <section class="section2Content">
+                <h2 class="sectionContentTitle"> CompetEvo: Towards Morphological Evolution from Competition </h2>
+                <h3 class="sectionContentSubTitle"> 
+                    <b>Kangyao Huang</b>, 
+                    <a href="https://scholar.google.com.hk/citations?user=OCauNHUAAAAJ" target="_blank">Di Guo</a>, 
+                    <a href="https://scholar.google.com.hk/citations?user=0Q7pN4cAAAAJ" target="_blank">Xinyu Zhang</a>, 
+                    <a style="color: #999;">Xiangyang Ji</a>, 
+                    <a href="https://scholar.google.com.hk/citations?user=HXnkIkwAAAAJ" target="_blank">Huaping Liu</a><ion-icon name="mail-outline"></ion-icon>, 
+                </h3>
+                <h3 class="sectionContentSubTitle">
+                    <em>International Joint Conference
+                        on Artificial  Intelligence (IJCAI) 2024 </em>
+                </h3>
+            </section>
+            <aside class="externalResourcesNav" style="margin-top:0%"> 
+                <div class="dropdown">
+                    <span></span><a href="https://competevo.github.io/" target="_blank">Project Page</a>
+                </div>
+                <div class="dropdown"> <span>Abstract</span>
+                    <div class="dropdown-content">
+                        <p style="text-align:left;">
+                            Training an agent to adapt to specific tasks through co-optimization of morphology and control has 
+                            gradually attracted attention. However, whether there exists an optimal configuration and tactics for 
+                            agents in a multiagent competition scenario is still an issue that is challenging to definitively conclude. 
+                            In this context, we propose competitive evolution (CompetEvo), which co-evolves agents' designs and tactics in 
+                            confrontation. We build arenas consisting of three animals and their evolved derivatives, placing agents with 
+                            different morphologies in direct competition with each other. The results reveal that our method enables agents 
+                            to evolve a more suitable design and strategy for fighting compared to fixed-morph agents, allowing them to 
+                            obtain advantages in combat scenarios. Moreover, we demonstrate the amazing and impressive behaviors that emerge 
+                            when confrontations are conducted under asymmetrical morphs.
+
+                        </p>
+                    </div>
+                </div>
+                <div class="dropdown"><span></span><a href="" target="_blank">Paper</a></div>
+                <div class="dropdown"><span></span><a href="https://github.com/KJaebye/competevo" target="_blank">Code</a></div>
+                <div class="dropdown"><span></span><a href="https://competevo.github.io/" target="_blank">Video</a></div>
+            </aside>
+        </div>
+        <br>
 
         <!-- 2024icra-->
         <div onmouseout="icra24_stop()" onmouseover="icra24_start()">	  
