--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <h2 class="sectionContentTitle"> emNavi (Embodied Navigation) </h2>
                 <h3 class="sectionContentSubTitle"> 
                     <b>Work with</b> 
-                    <a style="color: #999;">Colleagues </a><a style="font-style: italic;">@SuperMicro Navi Intelligence Co., Ltd. (超微智导)</a> and <a style="font-style: italic;">@Q.Y. Lab.</a>
+                    <a style="color: #999;">Colleagues </a><a style="font-style: italic;">@SuperMicro Navi Intelligence Co., Ltd. (超微智导)</a>
                 </h3>
                 <p style="font-size: 12px;">Brief: <b>emNavi</b> is an open-source project derived from "Embodied Navigation". 
                     The vision of emNavi is to re-construct and optimize the navigation-related SoTA (state of the art) 
