--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="dropdown"><span></span><a href="" target="_blank">Paper</a></div>
+                <div class="dropdown"><span></span><a href="http://arxiv.org/abs/2405.18300" target="_blank">Paper</a></div>
                 <div class="dropdown"><span></span><a href="https://github.com/KJaebye/competevo" target="_blank">Code</a></div>
                 <div class="dropdown"><span></span><a href="https://competevo.github.io/" target="_blank">Video</a></div>
             </aside>
