--- a/index.html
+++ b/index.html
@@ -937,9 +937,9 @@
                 <img src="profile/清华logo.png" width="3%" height="3%">
                 <p style="font-weight: bold;font-style: italic;">&emsp;2022~now,&emsp;</p>
                 <h3 class="sectionContentSubTitle">
-                    pursuing a <a style="font-weight: bold;">PhD</a> degree in Computer Science and Technology, <a style="font-weight: bold;">Tsinghua University</a>, China
+                    <a style="font-weight: bold;">PhD</a> candidate in Computer Science and Technology, <a style="font-weight: bold;">Tsinghua University</a>, China
                 </h3>
-                <p style="font-weight: bold;font-style: italic;">&emsp;Dissertation:&emsp;</p><p style="font-style: italic;">Morphology in Robot Learning</p>
+                <p style="font-weight: bold;font-style: italic;">&emsp;Dissertation:&emsp;</p><p style="font-style: italic;"> Robot Interactive Learning</p>
             </group>
             <group>
                 <img src="profile/UoS.jpg" width="3%" height="3%">
