--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <h2 class="sectionContentTitle"> emNavi (Embodied Navigation) </h2>
                 <h3 class="sectionContentSubTitle"> 
                     <b>Work with</b> 
-                    <a style="color: #999;">Colleagues </a><a style="font-style: italic;">@SuperMicro Navi Intelligence Co., Ltd. (超微智导)</a>
+                    <a style="color: #999;">Colleagues </a><a style="font-style: italic;">@TinyTech Co., Ltd. (超微智导)</a>
                 </h3>
                 <p style="font-size: 12px;">Brief: <b>emNavi</b> is an open-source project derived from "Embodied Navigation". 
                     The vision of emNavi is to re-construct and optimize the navigation-related SoTA (state of the art) 
@@ -474,7 +474,7 @@
                     <!-- <a href="https://scholar.google.com.hk/citations?user=pKCG3T8AAAAJ" target="_blank">Jianxi Luo</a>, -->
                 </h3>
                 <h3 class="sectionContentSubTitle">
-                    <em> 中国科学:技术科学, SCIENCE CHINA Technological Sciences, 2023</em>
+                    <em> 中国科学:技术科学, Science China-Technological Sciences, 2023</em>
                     <a style="color: rgb(247, 121, 175);font-weight: bold;font-style: oblique;font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">Cover Paper</a>
                 </h3>
             </section>
@@ -537,7 +537,7 @@
                     <em> IEEE Transactions on Intelligent Vehicles, 2022</em> 
                     <a style="color: rgb(247, 121, 175);font-weight: bold;font-style: oblique;font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">Review</a>
                     <em></em>
-                    <a style="color: rgb(247, 121, 175);font-weight: bold;font-style: oblique;font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">IF: 8.2</a>
+                    <a style="color: rgb(247, 121, 175);font-weight: bold;font-style: oblique;font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">IF: 14</a>
                 </h3>
             </section>
             <aside class="externalResourcesNav" style="margin-top:0%"> 
@@ -645,7 +645,7 @@
                 </h3>
                 <h3 class="sectionContentSubTitle">
                     <em>Swarm and Evolutionary Computation, 2021 </em>
-                    <a style="color: rgb(247, 121, 175);font-weight: bold;font-style: oblique;font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">IF: 10</a>
+                    <a style="color: rgb(247, 121, 175);font-weight: bold;font-style: oblique;font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">IF: 8.2</a>
                 </h3>
             </section>
             <aside class="externalResourcesNav" style="margin-top:0%"> 
