--- a/index.html
+++ b/index.html
@@ -101,6 +101,9 @@
             <div class="dropdown">
                 <span></span><a href="https://github.com/emNavi" target="_blank">Project Page</a>
             </div>
+            <div class="dropdown">
+                <span></span><a href="https://x152b.readthedocs.io/en/latest/" target="_blank">X152b doc</a>
+            </div>
         </aside>
     </div>
     <br>
