--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <h1 style="line-height: 30px;font-size: 28px;margin-bottom: auto;">Kangyao Huang&emsp;&emsp;<img src="profile/name.png" width="80" style="margin-bottom: -5px;"></h1>
         <h3>PhD Candidate | AI Researcher | Aircraft & Robotics Engineer</h3>
         <hr>
-        <p>I am an AI researcher and robot engineer from China. Currently, I am pursuing a PhD degree in Computer Science at Tsinghua University(THU) under the supervision of Prof. Huaping Liu.
-            Besides, I hold an MRes degree in Control from ACSE, the University of Sheffield(UoS), UK., supervised by Prof. John Oyekan, and a BEng degree in Aerospace from Northwestern Polytechnical
-            University(NWPU), China. Before my PhD work, I had several years start-up experience in aerospace and automation industrial sectors, serving as a UAV designer 
+        <p>My name is Kangyao Huang (黄康尧 in Chinese). I am an AI researcher and robot engineer from China. Currently, I am pursuing a PhD degree in Computer Science at Tsinghua University(THU) under the supervision of Prof. Huaping Liu.
+            I also hold an MRes degree in Control from ACSE, the University of Sheffield(UoS), UK., supervised by Prof. John Oyekan, and a BEng degree in Aerospace from Northwestern Polytechnical
+            University(NWPU), China. I had several years start-up experience in aerospace and automation industrial sectors, serving as a UAV designer 
             and technical director.
             <br>
             <br>My current research interest is in robot learning for virtual and real world practice. I also follow ideas on aerial robotics, 
